--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="app-header">
-        <h1 class="app-title">Annontate Screenshots</h1>
+        <h1 class="app-title">Annotate Screenshots</h1>
         <p class="app-subtitle">Screenshot. Annotate. Share.</p>
     </header>
 
